[package]
name = "byters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.1", features = ["client", "http1", "tokio"] }
tokio = { version = "1.35.0", features = ["net", "rt", "io-util"] }
