[package]
name = "byters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.29"
http = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.1", features = ["client", "http1", "tokio"] }
lazy_static = "1.4.0"
tokio = { version = "1.35.0", features = ["net", "rt", "io-util", "fs"] }
tokio-util = { version = "0.7.10", features = ["io"] }
